// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`singlePostsGlossaryPost Snapshot > renders with full post and auth disabled correctly 1`] = `
<div>
  <div class="
    grid
    grid-cols-1
    lg:grid-cols-3
    mt-10
  ">
    <div class="
      col-span-2
      pb-10
    ">
      <h1 class="
        font-bold
        lg:text-6xl
        text-4xl
      ">
        Nuxt Testing
      </h1>
      <p class="
        dark:prose-invert
        mt-4
        prose
      ">
        A quick guide on snapshot testing.
      </p>
    </div>
    <div class="
      col-span-1
      pb-10
    ">
      <div
        aria-busy="false"
        aria-label="YouTube Player - Loaded"
        role="application"
        style="
          position: relative;
          background-color: black;
          max-width: 100%;
          width: 640px;
          aspect-ratio: 640 / 360;
        "
        thumbnail-size="maxresdefault"
      >
        <div style="
          width: 100%;
          height: 100%;
          position: absolute;
          top: 0px;
          left: 0px;
        "></div>
        <img
          alt=""
          loading="lazy"
          src="https://i.ytimg.com/vi_webp/abc123/sddefault.webp"
          style="
            width: 100%;
            object-fit: cover;
            height: 100%;
          "
        />
        <!-- v-if -->
      </div>
    </div>
    <div
      class="
        align-center
        col-span-3
        flex
        flex-row
        items-center
        my-4
        text-center
        w-full
      "
      data-orientation="horizontal"
      role="separator"
    >
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
      <div class="
        flex
        font-medium
        mx-3
        text-default
        whitespace-nowrap
      ">
        <div class="
          flex
          items-center
          space-x-2
        ">
          <svg
            aria-label="SERP Brand logo"
            viewBox="0 0 1024 1024"
            width="35pt"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fill-[var(--ui-primary)]"
              d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"
            />
          </svg>
        </div>
      </div>
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
    </div>
    <!-- main section -->
    <div class="
      col-span-2
      dark:prose-invert
      prose
    ">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>
          Content of the post
        </p>
      </article>
      <div>
        <h2>
          Related Posts
        </h2>
        <ul>
          <li>
            Term 1
          </li>
          <li>
            Term 2
          </li>
          <li>
            Term 3
          </li>
        </ul>
      </div>
      <!-- Comments Section -->
      <!-- v-if -->
    </div>
    <!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>
`;

exports[`singlePostsGlossaryPost Snapshot > renders with full post and auth enabled correctly 1`] = `
<div>
  <div class="
    grid
    grid-cols-1
    lg:grid-cols-3
    mt-10
  ">
    <div class="
      col-span-2
      pb-10
    ">
      <h1 class="
        font-bold
        lg:text-6xl
        text-4xl
      ">
        Nuxt Testing
      </h1>
      <p class="
        dark:prose-invert
        mt-4
        prose
      ">
        A quick guide on snapshot testing.
      </p>
    </div>
    <div class="
      col-span-1
      pb-10
    ">
      <div
        aria-busy="true"
        aria-label="YouTube Player - Loading"
        role="application"
        style="
          position: relative;
          background-color: black;
          max-width: 100%;
          width: 640px;
          aspect-ratio: 640 / 360;
        "
        thumbnail-size="maxresdefault"
      >
        <div style="
          width: 100%;
          height: 100%;
          position: absolute;
          top: 0px;
          left: 0px;
        "></div>
        <img
          alt=""
          loading="lazy"
          src="https://i.ytimg.com/vi_webp/abc123/sddefault.webp"
          style="
            width: 100%;
            object-fit: cover;
            height: 100%;
          "
        />
        <div
          aria-label="Loading..."
          class="loader"
          role="status"
          styles="[object Object]"
        ></div>
      </div>
    </div>
    <div
      class="
        align-center
        col-span-3
        flex
        flex-row
        items-center
        my-4
        text-center
        w-full
      "
      data-orientation="horizontal"
      role="separator"
    >
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
      <div class="
        flex
        font-medium
        mx-3
        text-default
        whitespace-nowrap
      ">
        <div class="
          flex
          items-center
          space-x-2
        ">
          <svg
            aria-label="SERP Brand logo"
            viewBox="0 0 1024 1024"
            width="35pt"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fill-[var(--ui-primary)]"
              d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"
            />
          </svg>
        </div>
      </div>
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
    </div>
    <!-- main section -->
    <div class="
      col-span-2
      dark:prose-invert
      prose
    ">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>
          Content of the post
        </p>
      </article>
      <div>
        <h2>
          Related Posts
        </h2>
        <ul>
          <li>
            Term 1
          </li>
          <li>
            Term 2
          </li>
          <li>
            Term 3
          </li>
        </ul>
      </div>
      <!-- Comments Section -->
      <div class="mt-10">
        <h2 class="
          font-bold
          mb-6
          text-3xl
        ">
          Comments
        </h2>
        <div
          class="
            comments
            comments-github-style
          "
          style="background: transparent;"
        >
          <div class="innerWrapper">
            <div class="userName">
              <div class="addComment">
                <div class="
                  rounded-t-full
                  w-12
                ">
                  <!-- v-if -->
                </div>
                <div class="
                  commentBox
                  dark:text-white
                  text-black
                ">
                  <textarea
                    aria-label="Add comment"
                    class="
                      addComment
                      bg-white
                      border-neutral-500
                      dark:bg-neutral-800
                      dark:border-neutral-400
                    "
                    name="addComment"
                    placeholder="Add a comment"
                    spellcheck="true"
                  ></textarea>
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
              </div>
            </div>
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            >
              <div class="comment-wrapper">
                <div class="wrapper">
                  <div class="
                    rounded-t-full
                    w-12
                  ">
                    <!---->
                  </div>
                  <div class="comment-wrapper">
                    <div class="name-wrapper">
                      <div class="
                        name
                        text-(--ui-primary)
                      "></div>
                      <span class="dot">
                        •
                      </span>
                      <span
                        class="time"
                        title="Invalid Date"
                      >
                        just now
                      </span>
                      <!-- v-if -->
                      <div class="
                        expand
                        hover:text-(--ui-primary)
                      ">
                        <span title="Hide Comment">
                          −
                        </span>
                      </div>
                    </div>
                    <div class="
                      bg-white
                      comment
                      dark:bg-neutral-800
                      dark:text-white
                      text-black
                    ">
                      Test comment
                    </div>
                    <div
                      class="
                        comment-box
                        dark:text-white
                        text-black
                      "
                      style="display: none;"
                    >
                      <div class="
                        text-(--ui-primary)
                        user-name
                      "></div>
                      <textarea
                        aria-label="Add Comment"
                        class="
                          add-comment
                          bg-white
                          dark:bg-neutral-800
                        "
                        name="addUpdate"
                        placeholder="Update message"
                        spellcheck="false"
                      ></textarea>
                      <button
                        aria-label="Update"
                        class="
                          bg-primary
                          hover:bg-primary-800
                        "
                      >
                        <span>
                          Update
                        </span>
                      </button>
                      <div class="
                        bg-primary
                        remaining-letter
                      ">
                        <span>
                          1000
                        </span>
                      </div>
                    </div>
                    <div
                      class="
                        hover:text-(--ui-primary)
                        reply
                      "
                      style="display: none;"
                    >
                      <div>
                        Never mind
                      </div>
                    </div>
                    <div class="reply">
                      <div class="hover:text-(--ui-primary)">
                        Reply
                      </div>
                      <!-- v-if -->
                      <!-- v-if -->
                    </div>
                    <!-- v-if -->
                    <transition-group-stub
                      appear="true"
                      css="true"
                      name="fade"
                      persisted="false"
                      tag="div"
                    ></transition-group-stub>
                    <!-- v-if -->
                  </div>
                </div>
              </div>
            </transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </div>
    <!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>
`;

exports[`singlePostsGlossaryPost Snapshot > renders with non-empty relatedPosts correctly 1`] = `
<div>
  <div class="
    grid
    grid-cols-1
    lg:grid-cols-3
    mt-10
  ">
    <div class="
      col-span-2
      pb-10
    ">
      <h1 class="
        font-bold
        lg:text-6xl
        text-4xl
      ">
        Related Posts Present
      </h1>
      <p class="
        dark:prose-invert
        mt-4
        prose
      ">
        Post with related posts
      </p>
    </div>
    <div class="
      col-span-1
      pb-10
    ">
      <div
        aria-busy="false"
        aria-label="YouTube Player - Loaded"
        role="application"
        style="
          position: relative;
          background-color: black;
          max-width: 100%;
          width: 640px;
          aspect-ratio: 640 / 360;
        "
        thumbnail-size="maxresdefault"
      >
        <div style="
          width: 100%;
          height: 100%;
          position: absolute;
          top: 0px;
          left: 0px;
        "></div>
        <img
          alt=""
          loading="lazy"
          src="https://i.ytimg.com/vi_webp/def456/sddefault.webp"
          style="
            width: 100%;
            object-fit: cover;
            height: 100%;
          "
        />
        <!-- v-if -->
      </div>
    </div>
    <div
      class="
        align-center
        col-span-3
        flex
        flex-row
        items-center
        my-4
        text-center
        w-full
      "
      data-orientation="horizontal"
      role="separator"
    >
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
      <div class="
        flex
        font-medium
        mx-3
        text-default
        whitespace-nowrap
      ">
        <div class="
          flex
          items-center
          space-x-2
        ">
          <svg
            aria-label="SERP Brand logo"
            viewBox="0 0 1024 1024"
            width="35pt"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fill-[var(--ui-primary)]"
              d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"
            />
          </svg>
        </div>
      </div>
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
    </div>
    <!-- main section -->
    <div class="
      col-span-2
      dark:prose-invert
      prose
    ">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>
          Some content here
        </p>
      </article>
      <!-- v-if -->
      <!-- Comments Section -->
      <div class="mt-10">
        <h2 class="
          font-bold
          mb-6
          text-3xl
        ">
          Comments
        </h2>
        <div
          class="
            comments
            comments-github-style
          "
          style="background: transparent;"
        >
          <div class="innerWrapper">
            <div class="userName">
              <div class="addComment">
                <div class="
                  rounded-t-full
                  w-12
                ">
                  <!-- v-if -->
                </div>
                <div class="
                  commentBox
                  dark:text-white
                  text-black
                ">
                  <textarea
                    aria-label="Add comment"
                    class="
                      addComment
                      bg-white
                      border-neutral-500
                      dark:bg-neutral-800
                      dark:border-neutral-400
                    "
                    name="addComment"
                    placeholder="Add a comment"
                    spellcheck="true"
                  ></textarea>
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
              </div>
            </div>
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            ></transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </div>
    <!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>
`;

exports[`singlePostsGlossaryPost Snapshot > renders without video and minimal fields correctly 1`] = `
<div>
  <div class="
    grid
    grid-cols-1
    lg:grid-cols-3
    mt-10
  ">
    <div class="
      col-span-2
      pb-10
    ">
      <h1 class="
        font-bold
        lg:text-6xl
        text-4xl
      ">
        No Video Post
      </h1>
      <!-- v-if -->
    </div>
    <div class="
      col-span-1
      pb-10
    ">
      <!-- v-if -->
    </div>
    <div
      class="
        align-center
        col-span-3
        flex
        flex-row
        items-center
        my-4
        text-center
        w-full
      "
      data-orientation="horizontal"
      role="separator"
    >
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
      <div class="
        flex
        font-medium
        mx-3
        text-default
        whitespace-nowrap
      ">
        <div class="
          flex
          items-center
          space-x-2
        ">
          <svg
            aria-label="SERP Brand logo"
            viewBox="0 0 1024 1024"
            width="35pt"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fill-[var(--ui-primary)]"
              d=" M 127.62 540.68 C 255.64 429.97 383.70 319.31 511.76 208.65 C 639.74 319.23 767.70 429.86 895.69 540.45 C 895.70 631.71 895.73 722.97 895.64 814.23 C 719.72 662.17 543.76 510.14 367.81 358.10 C 398.86 414.80 429.83 471.54 460.92 528.22 C 349.85 623.79 238.69 719.27 127.67 814.91 C 127.66 723.50 127.67 632.09 127.62 540.68 Z"
            />
          </svg>
        </div>
      </div>
      <div class="
        border-default
        border-solid
        border-t
        w-full
      "></div>
    </div>
    <!-- main section -->
    <div class="
      col-span-2
      dark:prose-invert
      prose
    ">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <article>
        <p>
          Content without video
        </p>
      </article>
      <!-- v-if -->
      <!-- Comments Section -->
      <div class="mt-10">
        <h2 class="
          font-bold
          mb-6
          text-3xl
        ">
          Comments
        </h2>
        <div
          class="
            comments
            comments-github-style
          "
          style="background: transparent;"
        >
          <div class="innerWrapper">
            <div class="userName">
              <div class="addComment">
                <div class="
                  rounded-t-full
                  w-12
                ">
                  <!-- v-if -->
                </div>
                <div class="
                  commentBox
                  dark:text-white
                  text-black
                ">
                  <textarea
                    aria-label="Add comment"
                    class="
                      addComment
                      bg-white
                      border-neutral-500
                      dark:bg-neutral-800
                      dark:border-neutral-400
                    "
                    name="addComment"
                    placeholder="Add a comment"
                    spellcheck="true"
                  ></textarea>
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
              </div>
            </div>
            <transition-group-stub
              appear="true"
              css="true"
              name="fade"
              persisted="false"
              tag="div"
            ></transition-group-stub>
            <!-- v-if -->
          </div>
        </div>
      </div>
    </div>
    <!-- sidebar -->
    <div class="col-span-1"></div>
  </div>
</div>
`;
